# Autocann

./: .gitignore  ARCHITECTURE.md  INSTALL.md  Makefile  README.md  USAGE.md  pyproject.toml
autocann/: __init__.py  config.py  db.py  paths.py  time.py
autocann/cli/: __init__.py  backend.py  check_system.py  query_db.py  vpd.py
autocann/control/: __init__.py  vpd_math.py
autocann/hardware/: __init__.py  outputs.py
autocann/web/: __init__.py  app.py
autocann/web/templates/: index.html
scripts/: backend.py  check_i2c_bme.sh  check_system.py  database.py  fix-vpd.py  gpio_outputs.py  query_db.py  start_services.sh  watering.py
scripts/templates/: index.html
